update: status check with param control
